--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "json-server": "^0.15.1",
+    "material-table": "^1.54.2",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
