--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/node": "^13.1.2",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "axios": "^0.19.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "json-server": "^0.15.1",
@@ -61,6 +62,7 @@
     "react-scripts": "3.3.0",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.7.4"
   },
   "devDependencies": {
