--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "typescript": "^3.7.4"
   },
   "devDependencies": {
+    "@devexpress/dx-react-core": "^2.4.0",
+    "@devexpress/dx-react-scheduler": "^2.4.0",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.4.0",
     "eslint-watch": "^6.0.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
